Changed contrast, fixed alt texts, fixed accessibility errors

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,6 @@ th, td {
 }
 
 #cell1 {background-color: #fff}
-#cell2 {background-color: #E8E7ED; color:#FFFEC9;}
+#cell2 {background-color: #E8E7ED; color:#4c4c3c;}
 #cell3 {background-color: #000000; color:#ffffff;}
-#cell4 {background-color: #283A00}
+#cell4 {background-color: #fff}
